<resources>
    <string name="app_name">BootCampProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="login">Log in</string>
    <string name="password">password</string>
    <string name="reset">Reset</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="example_email_com">example@email.com</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="login_here">Login Here</string>
    <string name="id">468509486068-nl4n59iqjunsemr4nutm70rk6l0925tr.apps.googleusercontent.com</string>

    <string name="facebook_app_id">377925487472386</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">b1cb2b78b501c57e3ee72e7475c34dca</string>

</resources>