<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_forget_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Forget Password"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />



                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_gmail_com"
                    android:textColor="@color/blue_button"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/email_edittext_background"
                    android:drawableStart="@drawable/edittext_email"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


            <Button
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                android:layout_height="62sp"
                android:layout_marginTop="32sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/blue_button"
                android:text="@string/reset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128sp"
               android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/loginHere_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:textAllCaps="false"
                    android:text="@string/login_here"
                    android:textSize="16sp"
                    android:textColor="@color/blue_button"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</layout>
