<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_image" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/email_edittext_background"
            android:drawableLeft="@drawable/edittext_email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/example_email_com"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/email_edittext_background"
            android:drawableLeft="@drawable/edittext_password_icon"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email" />

        <Button
            android:id="@+id/forgetPassword_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:text="Forget Password?"
            android:textAllCaps="false"
            android:textColor="#666666"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/login_button_color"
            android:fontFamily="@font/aldrich"
            android:onClick="onClick"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword_button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Or connect with social"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_button"
                android:fontFamily="@font/roboto"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:visibility="gone" />

            <Button
                android:id="@+id/fb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_button"
                android:fontFamily="@font/roboto"
                android:text="@string/facebook"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/google_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="32sp"
                android:layout_weight="1"
                android:backgroundTint="@color/red_button"
                android:fontFamily="@font/roboto"
                android:text="@string/google"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
